# nultr-server

./: .env.example  .gitignore  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: cli.rs  config.rs  main.rs  server.rs
src/auth/: http.rs  jwt.rs  mod.rs
src/db/: mod.rs
src/db/entity/: messages.rs  mod.rs  prelude.rs  rooms.rs  rooms_users.rs  users.rs
src/db/repository/: implementation.rs  mod.rs
src/http/: controller.rs  mod.rs
src/state/: mod.rs
src/websocket_handler/: handler.rs  message.rs  mod.rs
src/ws/: connector.rs  controller.rs  message.rs  mod.rs
