[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.3", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["cargo", "derive"] }
cookie = "0.18.1"
dotenv = "0.15.0"
futures = "0.3.31"
headers = "0.4.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
once_cell = "1.21.3"
rand = "0.9.1"
rand_core = { version = "0.9.3", features = ["os_rng"] }
sea-orm = { version = "1.1.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "uuid"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["std", "serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
shared_lib = { path = "../shared_lib" }
rust-api-integrator = { path = "../rust-api-integrator", features = ["axum-integration"] }
